White space overflow fix (on the right side of the whole website)

--- a/smmwebreact/src/App.css
+++ b/smmwebreact/src/App.css
@@ -47,6 +47,11 @@ html {
     margin-right: 10px; 
 }
 
+
+html, body {
+    overflow-x: hidden;
+}
+
 .nav-link::before {
     content: '';
     position: absolute;
